2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of rm_cap_read to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of rm_cap_read to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* README: Update.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (ARCH_SOURCES): Remove variable.
	(ruth_SOURCES): Set to ruth.c.
	(COMMON_CPPFLAGS): Remove -I$(top_builddir)/newlib/include, add
	-I$@LIBC@/include.
	* output.c: Move to ../libc-parts/s_printf.c.
	* output.h: Remove file.
	* panic.c: Move to ../libc-parts/panic.c.
	* ruth.h: Remove file.
	* malloc.c: Likewise.
	* malloc-wrap.c: Likewise.
	* ia32-cmain.c: Move to ../libc-parts/ia32-cmain.c.
	* ia32-crt0.S: Move to ../libc-parts/ia32-crt0.S.
	* ruth.c: Include <stdio.h>.  Don't include "ruth.h".
	(output_debug): Declare, don't define.
	(exit): Remove function.
	(abort): Likewise.
	(getpagesize): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* output.h (putchar): Rename from this...
	(s_putchar): ... to this.
	(puts): Rename from this...
	(s_puts): ... to this.
	(vprintf): Rename from this...
	(s_vprintf): ... to this.
	(printf): Rename from this...
	(s_printf): ... to this.
	* output.c (putchar): Rename from this...
	(s_putchar): ... to this.  Update users.
	(puts): Rename from this...
	(s_puts): ... to this.  Update users.
	(vprintf): Rename from this...
	(s_vprintf): ... to this.  Update users.
	(printf): Rename from this...
	(s_printf): ... to this.
	* Makefile.am (ruth_SOURCES): Add object.h and object.c.
	* ia32-cmain.c: Include <stddef.h>.
	(cmain): Use s_printf rather than printf.
	* panic.c (panic_): Use s_printf and s_vprintf rather than printf
	and vprintf.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Add -I$(LIBC)/include.
	(ruth_SOURCES): Remove malloc-wrap.c, output.h and output.c.
	(ruth_LDADD): Set to $(top_builddir)/libc.a.